package com.napier.sem;

public class Department
{
    /**
     * represents the department number, string because in the format "d001"
     */
    public String dept_no;

    /**
     * represents the department name
     */
    public String dept_name;

    /**
     * represents the department manager
     */
    public Employee manager;
}
