@startuml
'https://plantuml.com/class-diagram


class App{
+connect()
+disconnect()
+getEmployee()
+displayEmployee(Employee)
+getSalariesByTitle(String)
+printSalaries(ArrayList<Employee>)
+main(String[])
+ArrayList<Employee> allSalaries
+Department Department(String)
+ArrayList<Employee> getSalariesByDepartment(Department)
}

class Employee
{
 +int emp_no
 +String first_name
 +String last_name
 +String title
 +int salary
 +String dept_name
 +String manager
}

class Department
{
+String dept_no
+String dept_name
+Employee manager
}

App ..> Employee
App "creates" ..> Employee
Department "1 "*--> "1 "Employee
Employee "1 "*--> "1 "Department
App .> Department
@enduml